policy-admin/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
spec:
  containers:
  - name: curl-container
    image: curlimages/curl  # Image containing curl
    command: ["sleep"]
    args: ["3600"]  # Keeps the pod running for an hour
